get data from form with express

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -31,3 +31,18 @@
     color: white;
   }
   
+
+.form-add-new {
+    width: 500;
+    margin: 0 auto;
+    padding-top: 100px;
+}
+
+.input-group {
+    padding: 10px;
+}
+
+.btn {
+    padding: 10px;
+    cursor: pointer;
+}
