--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,13 +7,37 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-
 <body>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
+    </div>
+    <div class="form-add-new">
+        <form action="/create-user" method="POST">
+            <fieldset>
+                <legend>Add new users</legend>
+                <div class="input-group">
+                    <label>Email: </label>
+                    <input type="text" name="email" />
+                </div>
+
+                <div class="input-group">
+                    <label>Name: </label>
+                    <input type="text" name="name" />
+                </div>
+
+                <div class="input-group">
+                    <label>City: </label>
+                    <input type="text" name="city" />
+                </div>
+
+                <div class="btn">
+                    <button>Save</button>
+                </div>
+            </fieldset>
+        </form>
     </div>
 </body>
 
