--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,38 +7,34 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
+
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="/create">Create Users</a>
     </div>
-    <div class="form-add-new">
-        <form action="/create-user" method="POST">
-            <fieldset>
-                <legend>Add new users</legend>
-                <div class="input-group">
-                    <label>Email: </label>
-                    <input type="text" name="email" />
-                </div>
 
-                <div class="input-group">
-                    <label>Name: </label>
-                    <input type="text" name="name" />
-                </div>
+    <div class="table-container">
+        <div class="title">List Users</div>
 
-                <div class="input-group">
-                    <label>City: </label>
-                    <input type="text" name="city" />
-                </div>
+        <table>
+            <tr>
+                <th>Id</th>
+                <th>Email</th>
+                <th>Name</th>
+                <th>City</th>
+            </tr>
+            <tr>
+                <td>Peter</td>
+                <td>Griffin</td>
+                <td>$100</td>
+                <td>$100</td>
+            </tr>
 
-                <div class="btn">
-                    <button>Save</button>
-                </div>
-            </fieldset>
-        </form>
+        </table>
     </div>
+
+
 </body>
 
 </html>
