--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -61,9 +61,13 @@
                     <td>
                         <%= user.city %>
                     </td>
-                    <td>
-                        <button>Edit</button>
-                        <button>Delete</button>
+                    <td style=" display: flex; gap: 5px;">
+                        <form action="/update/<%= user.id %>" method="POST">
+                            <button>Edit</button>
+                        </form>
+                        <form action="/delete/<%= user.id %>" method="POST">
+                            <button>Delete</button>
+                        </form>
                     </td>
                 </tr>
                 <% }); %>
